{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 2119,
  "lineage": "171809f9-efb0-1f9f-18fb-071a42d03a98",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "australia-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04c64749a1b5d5aaa",
            "arn": "arn:aws:ec2:ap-southeast-2:495599735872:elastic-ip/eipalloc-04c64749a1b5d5aaa",
            "domain": "vpc",
            "id": "eipalloc-04c64749a1b5d5aaa",
            "network_border_group": "ap-southeast-2",
            "public_dns": "ec2-3-24-129-124.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.24.129.124",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "australia-nat"
            },
            "tags_all": {
              "Name": "australia-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "california-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01c1ddeec1e384c44",
            "arn": "arn:aws:ec2:us-west-1:495599735872:elastic-ip/eipalloc-01c1ddeec1e384c44",
            "domain": "vpc",
            "id": "eipalloc-01c1ddeec1e384c44",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-13-52-112-87.us-west-1.compute.amazonaws.com",
            "public_ip": "13.52.112.87",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "california-nat"
            },
            "tags_all": {
              "Name": "california-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "hongkong-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-007c56d74066a6480",
            "arn": "arn:aws:ec2:ap-east-1:495599735872:elastic-ip/eipalloc-007c56d74066a6480",
            "domain": "vpc",
            "id": "eipalloc-007c56d74066a6480",
            "network_border_group": "ap-east-1",
            "public_dns": "ec2-43-199-185-110.ap-east-1.compute.amazonaws.com",
            "public_ip": "43.199.185.110",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "hongkong-nat"
            },
            "tags_all": {
              "Name": "hongkong-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "london-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0880539b3ec9b6865",
            "arn": "arn:aws:ec2:eu-west-2:495599735872:elastic-ip/eipalloc-0880539b3ec9b6865",
            "domain": "vpc",
            "id": "eipalloc-0880539b3ec9b6865",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-18-168-185-214.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.168.185.214",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "london-nat"
            },
            "tags_all": {
              "Name": "london-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "newyork-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05aa5c61192b91485",
            "arn": "arn:aws:ec2:us-east-1:495599735872:elastic-ip/eipalloc-05aa5c61192b91485",
            "domain": "vpc",
            "id": "eipalloc-05aa5c61192b91485",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-234-42-66.compute-1.amazonaws.com",
            "public_ip": "34.234.42.66",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "newyork-nat"
            },
            "tags_all": {
              "Name": "newyork-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "saopaulo-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d9a3fe7178b54d63",
            "arn": "arn:aws:ec2:sa-east-1:495599735872:elastic-ip/eipalloc-0d9a3fe7178b54d63",
            "domain": "vpc",
            "id": "eipalloc-0d9a3fe7178b54d63",
            "network_border_group": "sa-east-1",
            "public_dns": "ec2-54-232-233-167.sa-east-1.compute.amazonaws.com",
            "public_ip": "54.232.233.167",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "saopaulo-nat"
            },
            "tags_all": {
              "Name": "saopaulo-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "tokyo-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0edce27db790f66a1",
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:elastic-ip/eipalloc-0edce27db790f66a1",
            "domain": "vpc",
            "id": "eipalloc-0edce27db790f66a1",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-54-95-130-104.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.95.130.104",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tokyo-nat"
            },
            "tags_all": {
              "Name": "tokyo-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "tokyotest-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-075d1002fc7176433",
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:elastic-ip/eipalloc-075d1002fc7176433",
            "domain": "vpc",
            "id": "eipalloc-075d1002fc7176433",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-57-182-134-212.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "57.182.134.212",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tokyotest-nat"
            },
            "tags_all": {
              "Name": "tokyotest-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "australia-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:495599735872:internet-gateway/igw-0844d32bd3e8f28ad",
            "id": "igw-0844d32bd3e8f28ad",
            "owner_id": "495599735872",
            "tags": {
              "Name": "PROD-Australia-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Australia-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0957b314d808f4980"
          },
          "dependencies": [
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "california-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:495599735872:internet-gateway/igw-003cf6a6562807349",
            "id": "igw-003cf6a6562807349",
            "owner_id": "495599735872",
            "tags": {
              "Name": "PROD-Califonia-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Califonia-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0249a5541b8e67bc3"
          },
          "dependencies": [
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hongkong-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:495599735872:internet-gateway/igw-0b9d01a8e8cff855b",
            "id": "igw-0b9d01a8e8cff855b",
            "owner_id": "495599735872",
            "tags": {
              "Name": "PROD-Hongkong-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Hongkong-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-090a3b13c19e92e8c"
          },
          "dependencies": [
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "london-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:495599735872:internet-gateway/igw-07c4d29d184d013c1",
            "id": "igw-07c4d29d184d013c1",
            "owner_id": "495599735872",
            "tags": {
              "Name": "PROD-London-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-London-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0e1a62b2e03504a0e"
          },
          "dependencies": [
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "newyork-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495599735872:internet-gateway/igw-090942549ec5ca617",
            "id": "igw-090942549ec5ca617",
            "owner_id": "495599735872",
            "tags": {
              "Name": "PROD-New York-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-New York-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0da48ce2445d3085c"
          },
          "dependencies": [
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "saopaulo-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:495599735872:internet-gateway/igw-0084a82941091a5c5",
            "id": "igw-0084a82941091a5c5",
            "owner_id": "495599735872",
            "tags": {
              "Name": "PROD-Saup-Paulo-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Saup-Paulo-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-01f16130b02306e51"
          },
          "dependencies": [
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tokyo-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:internet-gateway/igw-06c4e1b5bb95b0cfd",
            "id": "igw-06c4e1b5bb95b0cfd",
            "owner_id": "495599735872",
            "tags": {
              "Name": "PROD-Tokyo-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Tokyo-igw",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0ed88e35ee9cb4393"
          },
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tokyotest-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:internet-gateway/igw-09892ffbe5599ffc4",
            "id": "igw-09892ffbe5599ffc4",
            "owner_id": "495599735872",
            "tags": {
              "Name": "TokyoTest_IG",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "TokyoTest_IG",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0842c8cab5b17f63b"
          },
          "dependencies": [
            "aws_vpc.tokyotest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "australia-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04c64749a1b5d5aaa",
            "association_id": "eipassoc-0ffdfb9e2068ac6ed",
            "connectivity_type": "public",
            "id": "nat-0a470016a98ecb65c",
            "network_interface_id": "eni-02c8a37407690ea9d",
            "private_ip": "172.22.1.155",
            "public_ip": "3.24.129.124",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c09357e48d061fc2",
            "tags": {
              "Name": "australia-nat"
            },
            "tags_all": {
              "Name": "australia-nat"
            }
          },
          "dependencies": [
            "aws_eip.australia-nat",
            "aws_internet_gateway.australia-igw",
            "aws_subnet.australia-public-subnet-2a",
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "california-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01c1ddeec1e384c44",
            "association_id": "eipassoc-0ad9273344a45f691",
            "connectivity_type": "public",
            "id": "nat-0d4606609c2a019ce",
            "network_interface_id": "eni-03f494aa5c46b22a8",
            "private_ip": "172.24.3.36",
            "public_ip": "13.52.112.87",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a94574f6abc1a17a",
            "tags": {
              "Name": "california-nat"
            },
            "tags_all": {
              "Name": "california-nat"
            }
          },
          "dependencies": [
            "aws_eip.california-nat",
            "aws_internet_gateway.california-igw",
            "aws_subnet.california-public-subnet-1c",
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "hongkong-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-007c56d74066a6480",
            "association_id": "eipassoc-035815369af565d49",
            "connectivity_type": "public",
            "id": "nat-08f732076bcfd9efb",
            "network_interface_id": "eni-099439eddcd67ac93",
            "private_ip": "172.23.1.184",
            "public_ip": "43.199.185.110",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d774c81a0c7c9875",
            "tags": {
              "Name": "hongkong-nat"
            },
            "tags_all": {
              "Name": "hongkong-nat"
            }
          },
          "dependencies": [
            "aws_eip.hongkong-nat",
            "aws_internet_gateway.hongkong-igw",
            "aws_subnet.hongkong-public-subnet-1a",
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "london-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0880539b3ec9b6865",
            "association_id": "eipassoc-0428137874188d9e8",
            "connectivity_type": "public",
            "id": "nat-0972e9500c4ed0989",
            "network_interface_id": "eni-00b46c5f72a2198fc",
            "private_ip": "172.20.1.204",
            "public_ip": "18.168.185.214",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d71b7faf38b210e9",
            "tags": {
              "Name": "london_nat"
            },
            "tags_all": {
              "Name": "london_nat"
            }
          },
          "dependencies": [
            "aws_eip.london-nat",
            "aws_internet_gateway.london-igw",
            "aws_subnet.london-public-subnet-2a",
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "newyork-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05aa5c61192b91485",
            "association_id": "eipassoc-0fcec27189066ed5a",
            "connectivity_type": "public",
            "id": "nat-0931498837d65914b",
            "network_interface_id": "eni-0449f22295997c0a0",
            "private_ip": "172.19.1.64",
            "public_ip": "34.234.42.66",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-017e2e1c70d20ab23",
            "tags": {
              "Name": "newyork-nat"
            },
            "tags_all": {
              "Name": "newyork-nat"
            }
          },
          "dependencies": [
            "aws_eip.newyork-nat",
            "aws_internet_gateway.newyork-igw",
            "aws_subnet.newyork-public-subnet-1a",
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "saopaulo-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d9a3fe7178b54d63",
            "association_id": "eipassoc-0d55d87adec3523f5",
            "connectivity_type": "public",
            "id": "nat-05d0bf5b674926464",
            "network_interface_id": "eni-07a75ea8ec932edea",
            "private_ip": "172.21.1.253",
            "public_ip": "54.232.233.167",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-073d5fe89ab7fcaf9",
            "tags": {
              "Name": "saopaulo-nat"
            },
            "tags_all": {
              "Name": "saopaulo-nat"
            }
          },
          "dependencies": [
            "aws_eip.saopaulo-nat",
            "aws_internet_gateway.saopaulo-igw",
            "aws_subnet.saopaulo-public-subnet-1a",
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "tokyo-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0edce27db790f66a1",
            "association_id": "eipassoc-0b51fd3599b226d85",
            "connectivity_type": "public",
            "id": "nat-03b2baec73e623bb0",
            "network_interface_id": "eni-03e71f49aa50950b3",
            "private_ip": "172.18.1.230",
            "public_ip": "54.95.130.104",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0029da55851194c45",
            "tags": {
              "Name": "tokyo-nat"
            },
            "tags_all": {
              "Name": "tokyo-nat"
            }
          },
          "dependencies": [
            "aws_eip.tokyo-nat",
            "aws_internet_gateway.tokyo-igw",
            "aws_subnet.tokyo-public-subnet-1a",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "tokyotest-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-075d1002fc7176433",
            "association_id": "eipassoc-0e513fb52696689bd",
            "connectivity_type": "public",
            "id": "nat-05b06f8c5ba5e0621",
            "network_interface_id": "eni-0ec1a332398405157",
            "private_ip": "172.26.1.143",
            "public_ip": "57.182.134.212",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c305dfdc1ea48649",
            "tags": {
              "Name": "tokyotest-nat"
            },
            "tags_all": {
              "Name": "tokyotest-nat"
            }
          },
          "dependencies": [
            "aws_eip.tokyotest-nat",
            "aws_internet_gateway.tokyotest-igw",
            "aws_subnet.tokyotest-public-subnet-1a",
            "aws_vpc.tokyotest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "australia-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:495599735872:route-table/rtb-0e1a4e2a745e1fdc6",
            "id": "rtb-0e1a4e2a745e1fdc6",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a470016a98ecb65c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "australia-private"
            },
            "tags_all": {
              "Name": "australia-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0957b314d808f4980"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.australia-nat",
            "aws_internet_gateway.australia-igw",
            "aws_nat_gateway.australia-nat",
            "aws_subnet.australia-public-subnet-2a",
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "australia-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:495599735872:route-table/rtb-0aad9d2efb624e8c3",
            "id": "rtb-0aad9d2efb624e8c3",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0844d32bd3e8f28ad",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "australia-public"
            },
            "tags_all": {
              "Name": "australia-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0957b314d808f4980"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.australia-igw",
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "california-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:495599735872:route-table/rtb-04714bca514431d12",
            "id": "rtb-04714bca514431d12",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d4606609c2a019ce",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "california-private"
            },
            "tags_all": {
              "Name": "california-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0249a5541b8e67bc3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.california-nat",
            "aws_internet_gateway.california-igw",
            "aws_nat_gateway.california-nat",
            "aws_subnet.california-public-subnet-1c",
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "california-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:495599735872:route-table/rtb-02a1bf5b2710d946a",
            "id": "rtb-02a1bf5b2710d946a",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-003cf6a6562807349",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "california-public"
            },
            "tags_all": {
              "Name": "california-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0249a5541b8e67bc3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.california-igw",
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hongkong-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:495599735872:route-table/rtb-0caaf51b624d9b7b2",
            "id": "rtb-0caaf51b624d9b7b2",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08f732076bcfd9efb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hongkong-private"
            },
            "tags_all": {
              "Name": "hongkong-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-090a3b13c19e92e8c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.hongkong-nat",
            "aws_internet_gateway.hongkong-igw",
            "aws_nat_gateway.hongkong-nat",
            "aws_subnet.hongkong-public-subnet-1a",
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hongkong-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:495599735872:route-table/rtb-07fc66fe16b4c9f2a",
            "id": "rtb-07fc66fe16b4c9f2a",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b9d01a8e8cff855b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hongkong-public"
            },
            "tags_all": {
              "Name": "hongkong-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-090a3b13c19e92e8c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.hongkong-igw",
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "london-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:495599735872:route-table/rtb-0df7646ad72af508e",
            "id": "rtb-0df7646ad72af508e",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0972e9500c4ed0989",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "london-private"
            },
            "tags_all": {
              "Name": "london-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e1a62b2e03504a0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.london-nat",
            "aws_internet_gateway.london-igw",
            "aws_nat_gateway.london-nat",
            "aws_subnet.london-public-subnet-2a",
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "london-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:495599735872:route-table/rtb-0eea99d3eb1277fbc",
            "id": "rtb-0eea99d3eb1277fbc",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07c4d29d184d013c1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "london-public"
            },
            "tags_all": {
              "Name": "london-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e1a62b2e03504a0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.london-igw",
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "newyork-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495599735872:route-table/rtb-00e19a0170c773850",
            "id": "rtb-00e19a0170c773850",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0931498837d65914b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "newyork-private"
            },
            "tags_all": {
              "Name": "newyork-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da48ce2445d3085c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.newyork-nat",
            "aws_internet_gateway.newyork-igw",
            "aws_nat_gateway.newyork-nat",
            "aws_subnet.newyork-public-subnet-1a",
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "newyork-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495599735872:route-table/rtb-036e691c19b723fe6",
            "id": "rtb-036e691c19b723fe6",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-090942549ec5ca617",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "newyork-public"
            },
            "tags_all": {
              "Name": "newyork-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da48ce2445d3085c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.newyork-igw",
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "saopaulo-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:495599735872:route-table/rtb-058b844f27abf1df8",
            "id": "rtb-058b844f27abf1df8",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05d0bf5b674926464",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "saopaulo-private"
            },
            "tags_all": {
              "Name": "saopaulo-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f16130b02306e51"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.saopaulo-nat",
            "aws_internet_gateway.saopaulo-igw",
            "aws_nat_gateway.saopaulo-nat",
            "aws_subnet.saopaulo-public-subnet-1a",
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "saopaulo-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:495599735872:route-table/rtb-06c8543a3844c2e5b",
            "id": "rtb-06c8543a3844c2e5b",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0084a82941091a5c5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "saopaulo-public"
            },
            "tags_all": {
              "Name": "saopaulo-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f16130b02306e51"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.saopaulo-igw",
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tokyo-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:route-table/rtb-036f03229dfd0b679",
            "id": "rtb-036f03229dfd0b679",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03b2baec73e623bb0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tokyo-private"
            },
            "tags_all": {
              "Name": "tokyo-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed88e35ee9cb4393"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.tokyo-nat",
            "aws_internet_gateway.tokyo-igw",
            "aws_nat_gateway.tokyo-nat",
            "aws_subnet.tokyo-public-subnet-1a",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tokyo-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:route-table/rtb-0f5145a3c6d9a007a",
            "id": "rtb-0f5145a3c6d9a007a",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06c4e1b5bb95b0cfd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tokyo-public"
            },
            "tags_all": {
              "Name": "tokyo-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed88e35ee9cb4393"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tokyo-igw",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tokyotest-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:route-table/rtb-02e01bb7d96949026",
            "id": "rtb-02e01bb7d96949026",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05b06f8c5ba5e0621",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tokyotest-private"
            },
            "tags_all": {
              "Name": "tokyotest-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0842c8cab5b17f63b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.tokyotest-nat",
            "aws_internet_gateway.tokyotest-igw",
            "aws_nat_gateway.tokyotest-nat",
            "aws_subnet.tokyotest-public-subnet-1a",
            "aws_vpc.tokyotest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tokyotest-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:route-table/rtb-0a14b332c0fed928a",
            "id": "rtb-0a14b332c0fed928a",
            "owner_id": "495599735872",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09892ffbe5599ffc4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tokyotest-public"
            },
            "tags_all": {
              "Name": "tokyotest-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0842c8cab5b17f63b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tokyotest-igw",
            "aws_vpc.tokyotest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "australia-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007d3286567efb003",
            "route_table_id": "rtb-0e1a4e2a745e1fdc6",
            "subnet_id": "subnet-017a2fbbd14c4610d"
          },
          "dependencies": [
            "aws_eip.australia-nat",
            "aws_internet_gateway.australia-igw",
            "aws_nat_gateway.australia-nat",
            "aws_route_table.australia-private",
            "aws_subnet.australia-private-subnet-2a",
            "aws_subnet.australia-public-subnet-2a",
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "australia-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007d3286567efb003",
            "route_table_id": "rtb-0e1a4e2a745e1fdc6",
            "subnet_id": "subnet-017a2fbbd14c4610d"
          },
          "dependencies": [
            "aws_eip.australia-nat",
            "aws_internet_gateway.australia-igw",
            "aws_nat_gateway.australia-nat",
            "aws_route_table.australia-private",
            "aws_subnet.australia-private-subnet-2a",
            "aws_subnet.australia-public-subnet-2a",
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "australia-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fdecf582429bf8db",
            "route_table_id": "rtb-0aad9d2efb624e8c3",
            "subnet_id": "subnet-0c09357e48d061fc2"
          },
          "dependencies": [
            "aws_internet_gateway.australia-igw",
            "aws_route_table.australia-public",
            "aws_subnet.australia-public-subnet-2a",
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "australia-public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0b8ce8d9235043f",
            "route_table_id": "rtb-0aad9d2efb624e8c3",
            "subnet_id": "subnet-0c09bd1f94442c5eb"
          },
          "dependencies": [
            "aws_internet_gateway.australia-igw",
            "aws_route_table.australia-public",
            "aws_subnet.australia-public-subnet-2b",
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "california-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096ac49c47d8d0f19",
            "route_table_id": "rtb-04714bca514431d12",
            "subnet_id": "subnet-088be9af9ca2295bd"
          },
          "dependencies": [
            "aws_eip.california-nat",
            "aws_internet_gateway.california-igw",
            "aws_nat_gateway.california-nat",
            "aws_route_table.california-private",
            "aws_subnet.california-private-subnet-1b",
            "aws_subnet.california-public-subnet-1c",
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "california-private-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f57f34b03ccaba5",
            "route_table_id": "rtb-04714bca514431d12",
            "subnet_id": "subnet-053e0df0ee5406147"
          },
          "dependencies": [
            "aws_eip.california-nat",
            "aws_internet_gateway.california-igw",
            "aws_nat_gateway.california-nat",
            "aws_route_table.california-private",
            "aws_subnet.california-private-subnet-1c",
            "aws_subnet.california-public-subnet-1c",
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "california-public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095ba01e2d4fa0c27",
            "route_table_id": "rtb-02a1bf5b2710d946a",
            "subnet_id": "subnet-0bd726f011bb90911"
          },
          "dependencies": [
            "aws_internet_gateway.california-igw",
            "aws_route_table.california-public",
            "aws_subnet.california-public-subnet-1b",
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "california-public-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031026bee33b58e92",
            "route_table_id": "rtb-02a1bf5b2710d946a",
            "subnet_id": "subnet-0a94574f6abc1a17a"
          },
          "dependencies": [
            "aws_internet_gateway.california-igw",
            "aws_route_table.california-public",
            "aws_subnet.california-public-subnet-1c",
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hong-kong-public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032e924fee1f31920",
            "route_table_id": "rtb-07fc66fe16b4c9f2a",
            "subnet_id": "subnet-0085bcfc16288efc5"
          },
          "dependencies": [
            "aws_internet_gateway.hongkong-igw",
            "aws_route_table.hongkong-public",
            "aws_subnet.hongkong-public-subnet-1b",
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hongkong-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bde7e5ebf1322837",
            "route_table_id": "rtb-0caaf51b624d9b7b2",
            "subnet_id": "subnet-0b8ec5ecbc5dbd6ef"
          },
          "dependencies": [
            "aws_eip.hongkong-nat",
            "aws_internet_gateway.hongkong-igw",
            "aws_nat_gateway.hongkong-nat",
            "aws_route_table.hongkong-private",
            "aws_subnet.hongkong-private-subnet-1a",
            "aws_subnet.hongkong-public-subnet-1a",
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hongkong-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08313eed92ec7d091",
            "route_table_id": "rtb-0caaf51b624d9b7b2",
            "subnet_id": "subnet-018b4ccedda32c9a8"
          },
          "dependencies": [
            "aws_eip.hongkong-nat",
            "aws_internet_gateway.hongkong-igw",
            "aws_nat_gateway.hongkong-nat",
            "aws_route_table.hongkong-private",
            "aws_subnet.hongkong-private-subnet-1b",
            "aws_subnet.hongkong-public-subnet-1a",
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hongkong-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c15a2e668eb541e",
            "route_table_id": "rtb-07fc66fe16b4c9f2a",
            "subnet_id": "subnet-0d774c81a0c7c9875"
          },
          "dependencies": [
            "aws_internet_gateway.hongkong-igw",
            "aws_route_table.hongkong-public",
            "aws_subnet.hongkong-public-subnet-1a",
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "london-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a32daf34d383e5e0",
            "route_table_id": "rtb-0df7646ad72af508e",
            "subnet_id": "subnet-04af31eb70bfefc62"
          },
          "dependencies": [
            "aws_eip.london-nat",
            "aws_internet_gateway.london-igw",
            "aws_nat_gateway.london-nat",
            "aws_route_table.london-private",
            "aws_subnet.london-private-subnet-2a",
            "aws_subnet.london-public-subnet-2a",
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "london-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d671a2ac0527c1b4",
            "route_table_id": "rtb-0df7646ad72af508e",
            "subnet_id": "subnet-07cc8eee9d70128af"
          },
          "dependencies": [
            "aws_eip.london-nat",
            "aws_internet_gateway.london-igw",
            "aws_nat_gateway.london-nat",
            "aws_route_table.london-private",
            "aws_subnet.london-private-subnet-2b",
            "aws_subnet.london-public-subnet-2a",
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "london-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4b9dcc5c15f45e7",
            "route_table_id": "rtb-0eea99d3eb1277fbc",
            "subnet_id": "subnet-0d71b7faf38b210e9"
          },
          "dependencies": [
            "aws_internet_gateway.london-igw",
            "aws_route_table.london-public",
            "aws_subnet.london-public-subnet-2a",
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "london-public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05bccb19ef7ca5830",
            "route_table_id": "rtb-0eea99d3eb1277fbc",
            "subnet_id": "subnet-0705201fdb3c8efc8"
          },
          "dependencies": [
            "aws_internet_gateway.london-igw",
            "aws_route_table.london-public",
            "aws_subnet.london-public-subnet-2b",
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "newyork-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc69b1f8cdb2cf29",
            "route_table_id": "rtb-00e19a0170c773850",
            "subnet_id": "subnet-063ff97b7d3128791"
          },
          "dependencies": [
            "aws_eip.newyork-nat",
            "aws_internet_gateway.newyork-igw",
            "aws_nat_gateway.newyork-nat",
            "aws_route_table.newyork-private",
            "aws_subnet.newyork-private-subnet-1a",
            "aws_subnet.newyork-public-subnet-1a",
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "newyork-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ebe657054e2c1a2",
            "route_table_id": "rtb-00e19a0170c773850",
            "subnet_id": "subnet-0574037f955bea43f"
          },
          "dependencies": [
            "aws_eip.newyork-nat",
            "aws_internet_gateway.newyork-igw",
            "aws_nat_gateway.newyork-nat",
            "aws_route_table.newyork-private",
            "aws_subnet.newyork-private-subnet-1b",
            "aws_subnet.newyork-public-subnet-1a",
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "newyork-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ec2003b6d85a4d7",
            "route_table_id": "rtb-036e691c19b723fe6",
            "subnet_id": "subnet-017e2e1c70d20ab23"
          },
          "dependencies": [
            "aws_internet_gateway.newyork-igw",
            "aws_route_table.newyork-public",
            "aws_subnet.newyork-public-subnet-1a",
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "newyork-public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f86cd0bc2c8295a8",
            "route_table_id": "rtb-036e691c19b723fe6",
            "subnet_id": "subnet-07eb28f58fbc342e2"
          },
          "dependencies": [
            "aws_internet_gateway.newyork-igw",
            "aws_route_table.newyork-public",
            "aws_subnet.newyork-public-subnet-1b",
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sao-paulo-public-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094c6e9ccff363dfd",
            "route_table_id": "rtb-06c8543a3844c2e5b",
            "subnet_id": "subnet-032ce8937248358aa"
          },
          "dependencies": [
            "aws_internet_gateway.saopaulo-igw",
            "aws_route_table.saopaulo-public",
            "aws_subnet.saopaulo-public-subnet-1c",
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "saopaulo-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d74d1aaf84115b40",
            "route_table_id": "rtb-058b844f27abf1df8",
            "subnet_id": "subnet-0c259e1453cb7810d"
          },
          "dependencies": [
            "aws_eip.saopaulo-nat",
            "aws_internet_gateway.saopaulo-igw",
            "aws_nat_gateway.saopaulo-nat",
            "aws_route_table.saopaulo-private",
            "aws_subnet.saopaulo-private-subnet-1a",
            "aws_subnet.saopaulo-public-subnet-1a",
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "saopaulo-private-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c21b5c177e62eb26",
            "route_table_id": "rtb-058b844f27abf1df8",
            "subnet_id": "subnet-0d45fc35058c91005"
          },
          "dependencies": [
            "aws_eip.saopaulo-nat",
            "aws_internet_gateway.saopaulo-igw",
            "aws_nat_gateway.saopaulo-nat",
            "aws_route_table.saopaulo-private",
            "aws_subnet.saopaulo-private-subnet-1c",
            "aws_subnet.saopaulo-public-subnet-1a",
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "saopaulo-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00701d7c901b3b419",
            "route_table_id": "rtb-06c8543a3844c2e5b",
            "subnet_id": "subnet-073d5fe89ab7fcaf9"
          },
          "dependencies": [
            "aws_internet_gateway.saopaulo-igw",
            "aws_route_table.saopaulo-public",
            "aws_subnet.saopaulo-public-subnet-1a",
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tokyo-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ba3a4d0b48be670",
            "route_table_id": "rtb-036f03229dfd0b679",
            "subnet_id": "subnet-08271d477cfcf960e"
          },
          "dependencies": [
            "aws_eip.tokyo-nat",
            "aws_internet_gateway.tokyo-igw",
            "aws_nat_gateway.tokyo-nat",
            "aws_route_table.tokyo-private",
            "aws_subnet.tokyo-private-subnet-1a",
            "aws_subnet.tokyo-public-subnet-1a",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tokyo-private-d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f86ca14226ca0ca",
            "route_table_id": "rtb-036f03229dfd0b679",
            "subnet_id": "subnet-090d0bd84772ff199"
          },
          "dependencies": [
            "aws_eip.tokyo-nat",
            "aws_internet_gateway.tokyo-igw",
            "aws_nat_gateway.tokyo-nat",
            "aws_route_table.tokyo-private",
            "aws_subnet.tokyo-private-subnet-1d",
            "aws_subnet.tokyo-public-subnet-1a",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tokyo-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e14f50c534905786",
            "route_table_id": "rtb-0f5145a3c6d9a007a",
            "subnet_id": "subnet-0029da55851194c45"
          },
          "dependencies": [
            "aws_internet_gateway.tokyo-igw",
            "aws_route_table.tokyo-public",
            "aws_subnet.tokyo-public-subnet-1a",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tokyo-public-d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08766a7dd08b3a0d4",
            "route_table_id": "rtb-0f5145a3c6d9a007a",
            "subnet_id": "subnet-0b6599c9e83974c14"
          },
          "dependencies": [
            "aws_internet_gateway.tokyo-igw",
            "aws_route_table.tokyo-public",
            "aws_subnet.tokyo-public-subnet-1d",
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tokyotest-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fba11171f3124bb3",
            "route_table_id": "rtb-02e01bb7d96949026",
            "subnet_id": "subnet-07034f699571eff26"
          },
          "dependencies": [
            "aws_eip.tokyotest-nat",
            "aws_internet_gateway.tokyotest-igw",
            "aws_nat_gateway.tokyotest-nat",
            "aws_route_table.tokyotest-private",
            "aws_subnet.tokyotest-private-subnet-1a",
            "aws_subnet.tokyotest-public-subnet-1a",
            "aws_vpc.tokyotest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tokyotest-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b18b039e72c05677",
            "route_table_id": "rtb-0a14b332c0fed928a",
            "subnet_id": "subnet-0c305dfdc1ea48649"
          },
          "dependencies": [
            "aws_internet_gateway.tokyotest-igw",
            "aws_route_table.tokyotest-public",
            "aws_subnet.tokyotest-public-subnet-1a",
            "aws_vpc.tokyotest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "australia-private-subnet-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:495599735872:subnet/subnet-017a2fbbd14c4610d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "172.22.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017a2fbbd14c4610d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Australia-subnet-2a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Australia-subnet-2a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0957b314d808f4980"
          },
          "dependencies": [
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "australia-private-subnet-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:495599735872:subnet/subnet-099ff58a62b6999a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "172.22.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099ff58a62b6999a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Australia-subnet-2b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Australia-subnet-2b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0957b314d808f4980"
          },
          "dependencies": [
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "australia-public-subnet-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:495599735872:subnet/subnet-0c09357e48d061fc2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "172.22.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c09357e48d061fc2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Australia-subnet-2a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Australia-subnet-2a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0957b314d808f4980"
          },
          "dependencies": [
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "australia-public-subnet-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:495599735872:subnet/subnet-0c09bd1f94442c5eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "172.22.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c09bd1f94442c5eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Australia-subnet-2b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Australia-subnet-2b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0957b314d808f4980"
          },
          "dependencies": [
            "aws_vpc.australia-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "california-private-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:495599735872:subnet/subnet-088be9af9ca2295bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.24.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088be9af9ca2295bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Califonia-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Califonia-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0249a5541b8e67bc3"
          },
          "dependencies": [
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "california-private-subnet-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:495599735872:subnet/subnet-053e0df0ee5406147",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.24.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053e0df0ee5406147",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Hongkong-subnet-1c",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Hongkong-subnet-1c",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0249a5541b8e67bc3"
          },
          "dependencies": [
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "california-public-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:495599735872:subnet/subnet-0bd726f011bb90911",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "172.24.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd726f011bb90911",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Califonia-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Califonia-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0249a5541b8e67bc3"
          },
          "dependencies": [
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "california-public-subnet-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:495599735872:subnet/subnet-0a94574f6abc1a17a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "172.24.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a94574f6abc1a17a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Califonia-subnet-1c",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Califonia-subnet-1c",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0249a5541b8e67bc3"
          },
          "dependencies": [
            "aws_vpc.california-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hongkong-private-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:495599735872:subnet/subnet-0b8ec5ecbc5dbd6ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1a",
            "availability_zone_id": "ape1-az1",
            "cidr_block": "172.23.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8ec5ecbc5dbd6ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Hongkong-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Hongkong-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-090a3b13c19e92e8c"
          },
          "dependencies": [
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hongkong-private-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:495599735872:subnet/subnet-018b4ccedda32c9a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1b",
            "availability_zone_id": "ape1-az2",
            "cidr_block": "172.23.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018b4ccedda32c9a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Hongkong-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Hongkong-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-090a3b13c19e92e8c"
          },
          "dependencies": [
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hongkong-public-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:495599735872:subnet/subnet-0d774c81a0c7c9875",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1a",
            "availability_zone_id": "ape1-az1",
            "cidr_block": "172.23.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d774c81a0c7c9875",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Hongkong-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Hongkong-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-090a3b13c19e92e8c"
          },
          "dependencies": [
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hongkong-public-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:495599735872:subnet/subnet-0085bcfc16288efc5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1b",
            "availability_zone_id": "ape1-az2",
            "cidr_block": "172.23.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0085bcfc16288efc5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Hongkong-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Hongkong-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-090a3b13c19e92e8c"
          },
          "dependencies": [
            "aws_vpc.hongkong-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "london-private-subnet-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:495599735872:subnet/subnet-04af31eb70bfefc62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.20.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04af31eb70bfefc62",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-London-subnet-2a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-London-subnet-2a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0e1a62b2e03504a0e"
          },
          "dependencies": [
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "london-private-subnet-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:495599735872:subnet/subnet-07cc8eee9d70128af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.20.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07cc8eee9d70128af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-London-subnet-2b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-London-subnet-2b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0e1a62b2e03504a0e"
          },
          "dependencies": [
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "london-public-subnet-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:495599735872:subnet/subnet-0d71b7faf38b210e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d71b7faf38b210e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-London-subnet-2a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-London-subnet-2a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0e1a62b2e03504a0e"
          },
          "dependencies": [
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "london-public-subnet-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:495599735872:subnet/subnet-0705201fdb3c8efc8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0705201fdb3c8efc8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-New York-subnet-2b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-New York-subnet-2b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0e1a62b2e03504a0e"
          },
          "dependencies": [
            "aws_vpc.london-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "newyork-private-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495599735872:subnet/subnet-063ff97b7d3128791",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.19.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063ff97b7d3128791",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-New York-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-New York-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0da48ce2445d3085c"
          },
          "dependencies": [
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "newyork-private-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495599735872:subnet/subnet-0574037f955bea43f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.19.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0574037f955bea43f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-New York-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-New York-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0da48ce2445d3085c"
          },
          "dependencies": [
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "newyork-public-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495599735872:subnet/subnet-017e2e1c70d20ab23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.19.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017e2e1c70d20ab23",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-New York-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-New York-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0da48ce2445d3085c"
          },
          "dependencies": [
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "newyork-public-subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495599735872:subnet/subnet-07eb28f58fbc342e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.19.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07eb28f58fbc342e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-New York-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-New York-subnet-1b",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0da48ce2445d3085c"
          },
          "dependencies": [
            "aws_vpc.newyork-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "saopaulo-private-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:495599735872:subnet/subnet-0c259e1453cb7810d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "172.21.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c259e1453cb7810d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Saup-Paulo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Saup-Paulo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-01f16130b02306e51"
          },
          "dependencies": [
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "saopaulo-private-subnet-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:495599735872:subnet/subnet-0d45fc35058c91005",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "172.21.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d45fc35058c91005",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Saup-Paulo-subnet-1c",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Saup-Paulo-subnet-1c",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-01f16130b02306e51"
          },
          "dependencies": [
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "saopaulo-public-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:495599735872:subnet/subnet-073d5fe89ab7fcaf9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "172.21.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073d5fe89ab7fcaf9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Saup-Paulo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Saup-Paulo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-01f16130b02306e51"
          },
          "dependencies": [
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "saopaulo-public-subnet-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:495599735872:subnet/subnet-032ce8937248358aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "172.21.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032ce8937248358aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Saup-Paulo-subnet-1c",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Saup-Paulo-subnet-1c",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-01f16130b02306e51"
          },
          "dependencies": [
            "aws_vpc.saopaulo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tokyo-private-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:subnet/subnet-08271d477cfcf960e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "172.18.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08271d477cfcf960e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Tokyo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Tokyo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0ed88e35ee9cb4393"
          },
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tokyo-private-subnet-1d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:subnet/subnet-090d0bd84772ff199",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "172.18.14.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090d0bd84772ff199",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Tokyo-subnet-1d",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Tokyo-subnet-1d",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0ed88e35ee9cb4393"
          },
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tokyo-public-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:subnet/subnet-0029da55851194c45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "172.18.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0029da55851194c45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Tokyo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Tokyo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0ed88e35ee9cb4393"
          },
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tokyo-public-subnet-1d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:subnet/subnet-0b6599c9e83974c14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "172.18.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6599c9e83974c14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PROD-Tokyo-subnet-1d",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "PROD-Tokyo-subnet-1d",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0ed88e35ee9cb4393"
          },
          "dependencies": [
            "aws_vpc.tokyo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tokyotest-private-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:subnet/subnet-07034f699571eff26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "172.26.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07034f699571eff26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TEST-Tokyo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "TEST-Tokyo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0842c8cab5b17f63b"
          },
          "dependencies": [
            "aws_vpc.tokyotest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tokyotest-public-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:subnet/subnet-0c305dfdc1ea48649",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "172.26.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c305dfdc1ea48649",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "495599735872",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TEST-Tokyo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "tags_all": {
              "Name": "TEST-Tokyo-subnet-1a",
              "Owner": "MATTRESS AVENGERS",
              "Service": "Armageddon Phase 1"
            },
            "vpc_id": "vpc-0842c8cab5b17f63b"
          },
          "dependencies": [
            "aws_vpc.tokyotest-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "australia-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].australia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:495599735872:vpc/vpc-0957b314d808f4980",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.22.0.0/16",
            "default_network_acl_id": "acl-07046a1f92fac060a",
            "default_route_table_id": "rtb-0b1ef62b7f8792e9f",
            "default_security_group_id": "sg-0c78a20da583af142",
            "dhcp_options_id": "dopt-02760a403b66894c2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0957b314d808f4980",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b1ef62b7f8792e9f",
            "owner_id": "495599735872",
            "tags": {
              "Name": "PROD-Australia-vpc"
            },
            "tags_all": {
              "Name": "PROD-Australia-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "california-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].california",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:495599735872:vpc/vpc-0249a5541b8e67bc3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.24.0.0/16",
            "default_network_acl_id": "acl-0367f708bc360b883",
            "default_route_table_id": "rtb-080e25357a863f1b6",
            "default_security_group_id": "sg-07d3c8be5b26e6b03",
            "dhcp_options_id": "dopt-07e622ac9bd3f5e40",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0249a5541b8e67bc3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-080e25357a863f1b6",
            "owner_id": "495599735872",
            "tags": {
              "Name": "PROD-Califonia-vpc"
            },
            "tags_all": {
              "Name": "PROD-Califonia-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hongkong-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].hong-kong",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:495599735872:vpc/vpc-090a3b13c19e92e8c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.23.0.0/16",
            "default_network_acl_id": "acl-0749560b4eb737e34",
            "default_route_table_id": "rtb-03be3055f003aa408",
            "default_security_group_id": "sg-0c306d29c6c947c60",
            "dhcp_options_id": "dopt-0f85db491eeb22e8e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-090a3b13c19e92e8c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03be3055f003aa408",
            "owner_id": "495599735872",
            "tags": {
              "Name": "PROD-Hongkong-vpc"
            },
            "tags_all": {
              "Name": "PROD-Hongkong-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "london-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].london",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:495599735872:vpc/vpc-0e1a62b2e03504a0e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-059077a57dc37bd99",
            "default_route_table_id": "rtb-00d54a12190dc413a",
            "default_security_group_id": "sg-042954d9a7fc498ca",
            "dhcp_options_id": "dopt-0b7e43e752b1abf33",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e1a62b2e03504a0e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00d54a12190dc413a",
            "owner_id": "495599735872",
            "tags": {
              "Name": "PROD-London-vpc"
            },
            "tags_all": {
              "Name": "PROD-London-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "newyork-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].new-york",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:495599735872:vpc/vpc-0da48ce2445d3085c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.19.0.0/16",
            "default_network_acl_id": "acl-0ac45c36d02960013",
            "default_route_table_id": "rtb-08ef9e37ac3aa100e",
            "default_security_group_id": "sg-0921cbcd9c7bab7e1",
            "dhcp_options_id": "dopt-068cedb6b46f1ecf5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0da48ce2445d3085c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08ef9e37ac3aa100e",
            "owner_id": "495599735872",
            "tags": {
              "Name": "PROD-New York-vpc"
            },
            "tags_all": {
              "Name": "PROD-New York-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "saopaulo-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].sao-paulo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:495599735872:vpc/vpc-01f16130b02306e51",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.21.0.0/16",
            "default_network_acl_id": "acl-09bbda865d2570e20",
            "default_route_table_id": "rtb-039eccc5beeadb88b",
            "default_security_group_id": "sg-0a1c1a1ba31416b07",
            "dhcp_options_id": "dopt-0db4a8e8302520b79",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01f16130b02306e51",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-039eccc5beeadb88b",
            "owner_id": "495599735872",
            "tags": {
              "Name": "PROD-Saup-Paulo-vpc"
            },
            "tags_all": {
              "Name": "PROD-Saup-Paulo-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tokyo-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:vpc/vpc-0ed88e35ee9cb4393",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.18.0.0/16",
            "default_network_acl_id": "acl-0e64e45af36d3dbcc",
            "default_route_table_id": "rtb-0aef1f4d490e05693",
            "default_security_group_id": "sg-0779373c0dd5d6afc",
            "dhcp_options_id": "dopt-0a6b10ece991cf8de",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ed88e35ee9cb4393",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aef1f4d490e05693",
            "owner_id": "495599735872",
            "tags": {
              "Name": "PROD-Tokyo-vpc"
            },
            "tags_all": {
              "Name": "PROD-Tokyo-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tokyotest-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo-testb",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495599735872:vpc/vpc-0842c8cab5b17f63b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.26.0.0/16",
            "default_network_acl_id": "acl-053751db47174acf8",
            "default_route_table_id": "rtb-05396b6e9f2a860c3",
            "default_security_group_id": "sg-0b9db65316b4cd46e",
            "dhcp_options_id": "dopt-0a6b10ece991cf8de",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0842c8cab5b17f63b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05396b6e9f2a860c3",
            "owner_id": "495599735872",
            "tags": {
              "Name": "TEST-Tokyo-vpc"
            },
            "tags_all": {
              "Name": "TEST-Tokyo-vpc"
            }
          }
        }
      ]
    }
  ]
}